Update baru tugas 7

--- a/frontend/frontend.html
+++ b/frontend/frontend.html
@@ -97,9 +97,9 @@
     <h2>List Notes</h2>
     <div id="notesContainer"></div>
   </div>
-
+  <script src="utils.js"></script>
   <script>
-    const BASE_URL = "http://localhost:5000";
+    
 
     function updateUIOnLogin(isLoggedIn) {
       document.getElementById("loginForm").classList.toggle("hidden", isLoggedIn);
